# work-order-process

./: .env.example  .gitignore  README.md  agents.md  main.py  merge_erp_data.py  merge_erp_data_20260715.py  pyproject.toml  sync_customers_contacts.sh  sync_tickets.sh  工单数据库设计说明与使用文档_v1.1.md
config/: erp_merge_rules.toml  time_metrics.json  work_calendar_cn_2026.json
docs/: api_data_resolution_mapping.md  development_progress.md  merged_practical_guide.md  mysql_schema.md  personnel_mysql_usage.md  server_operations.md  time_metrics_usage.md
docs/erp_merge/: 新旧ERP数据合并处理规则说明_20260715.md  标准Sheet1与分摊字段说明.md
scripts/: count_2025_ticket_months.py  export_ticket_detail_excel.py  inspect_bangwo8_docs.py  probe_ticket_field_endpoints.py
sql/: customer_account.sql  erp_contract_data.sql  erp_data.sql  ops_service_revenue_monthly.sql  v_ops_service_revenue_monthly_with_total.sql
src/work_order_process/: __init__.py  api.py  auxiliary_schema.py  business_time.py  cli.py  config.py  customer_account_import.py  customer_contact_sync.py  daily_runner.py  dictionary.py  erp_document_export.py  erp_import.py  (+12 more)
tests/: test_api.py  test_business_time.py  test_config.py  test_customer_contact_sync.py  test_dependency_groups.py  test_dictionary.py  test_erp_document_export.py  test_erp_import.py  test_erp_migrations.py  test_erp_schema.py  test_monthly_export.py  test_mysql_storage.py  test_personnel_import.py  test_resolver.py  test_revenue_summary.py  test_snapshot_imports.py  test_structured_entities.py  test_structured_ticket.py  test_time_metrics.py  test_transform.py
(+18 files in other folders)
