[project]
name = "work-order-process"
version = "0.1.0"
description = "Fetch and normalize Bosssoft work-order data."
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "httpx>=0.28.1",
    "pydantic>=2.13.4",
    "pymysql>=1.1.2",
    "pypdf>=6.14.2",
    "python-dotenv>=1.2.2",
    "rich>=15.0.0",
]

[project.scripts]
work-order-process = "work_order_process.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "pytest>=9.1.1",
]

[tool.pytest.ini_options]
pythonpath = ["src"]
