[project]
name = "work_order_process"
version = "1.1.0"
description = "Fetch, normalize, and import Bosssoft work-order data."
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "httpx>=0.28.1",
    "pydantic>=2.13.4",
    "pymysql>=1.1.2",
    "pypdf>=6.14.2",
    "python-dotenv>=1.2.2",
    "rich>=15.0.0",
    "xlrd>=2.0.2",
    "openpyxl>=3.1.0",
    "apscheduler>=3.10.0",
    "python-dateutil>=2.8.0",
]

[project.scripts]
"work_order_process" = "work_order_process.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/work_order_process"]

[dependency-groups]
dev = [
    "pytest>=9.1.1",
]

[tool.pytest.ini_options]
pythonpath = ["src"]
